--- a/.github/workflows/bundle.yml
+++ b/.github/workflows/bundle.yml
@@ -10,9 +10,10 @@ jobs:
       - name: Prepare git
         run: |
           git config --global core.autocrlf false
-          git config --global user.email '121622595+jeroen[bot]@users.noreply.github.com'
-          git config --global user.name  'Jeroen (via CI)'
-      - uses: actions/checkout@v2
+          git config --global user.email 'jeroenooms@gmail.com'
+          git config --global user.name  'Jeroen Ooms (via CI)'
+      - uses: actions/checkout@v3
+      - uses: r-windows/install-rtools@master
       - id: download
         name: Download libraries
         run: |
@@ -22,8 +23,8 @@ jobs:
       - name: Push binaries
         run: |
           version=${{ steps.download.outputs.VERSION }}
-          git add README.md include lib* bin*
-          git commit -m "Bundle $version ($(date +%F))" || exit 0
+          git add README.md include lib lib-8.3.0 bin bin32
+          git commit -a -m "Bundle $version ($(date +%F))" || exit 0
           git tag $version
           git push origin master $version
         shell: bash
